--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,3 +8,26 @@
 @import 'additional-styles/flatpickr.css';
 
 @import 'tailwindcss/utilities';
+/* For WebKit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+    background: transparent; /* Background of the scrollbar track */
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(223, 220, 220, 0.5); /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Rounded corners for the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(223, 215, 215, 0.8); /* Color on hover */
+}
+
+/* For Firefox */
+* {
+    scrollbar-width: thin; /* Makes the scrollbar thinner */
+    scrollbar-color: rgba(221, 215, 215, 0.5) transparent; /* Color of the thumb and track */
+}
